PMT-3: Add DTOs with validation, controller and exception handling
